# nlp-projects

./: .gitignore  Lost_in_Language_Recognition_output_multimodalnn.csv  Lost_in_Language_Recognition_output_roberta.csv  README.md  category_table.py  dataset.py  dataset_app.py  dataset_nlp.py  dictionaries.py  dictonary.py  entity.py  entity_factory.py  feature.py  file_util.py  generate_entities_app.py  iterable_entities.py  load_models_save_locally.py  multi_modal_model.py  nlp_app.py  nlp_hyper_params.py  no-transformer-inference.csv  processed_dataset.py  processed_entity.py  seed.py  text_classifier.py  trainer.py  transformer-bert-inference.csv  transformer-bigbird-inference.csv  transformer-roberta-base-5-inference.csv  transformer-roberta-base-inference.csv  transformer-roberta-large-inference.csv
colabs/: NLP_no_transformer_inference.ipynb  NLP_no_transformer_training.ipynb  NLP_yes_transformer_inference.ipynb  NLP_yes_transformer_training.ipynb  nlp-homework-1.tex  yes-transformer.json
discovery/: Progetto NLP Appunti .txt
latex/: nlp-homework-1.tex  no-transformer.json
nlp-culturalitems-classification/: Lost_in_Language_Recognition_output_multimodalnn.csv  Lost_in_Language_Recognition_output_roberta.csv  README.md
nlp-culturalitems-classification/colabs/: NLP_no_transformer_inference.ipynb  NLP_no_transformer_training.ipynb  README.md
nlp-culturalitems-classification/latex/: nlp-homework-1.tex
nlp-culturalitems-classification/no_transformer/: dictionaries.py  entity.py  entity_factory.py  inference_app.py  nlp_dataset.py  nlp_hyper_params.py  processed_entity.py  trainer.py
nlp-culturalitems-classification/transformer/: inference_app.py  inference_model.py  nlp_app.py  nlp_hyper_params.py  nlp_trainer.py  wiki_dataset.py
nlp-play/: .gitignore  Containerfile  README.md  inference.py  main.py  pyproject.toml
nlp-play/token-classification/: pyproject.toml
nlp-play/token-classification/src/token_classification/: __init__.py  token_classification.py  token_classification_inference.py
nlp-play/token-classification/tests/: test_encoder_splitter.py  test_token_classification.py
no_transformer/: dataset.py  dictionaries.py  glove_processing.py  inference_app.py  iterable_entities.py  multi_modal_model.py  nlp_app.py  nlp_dataset.py  nlp_hyper_params.py  processed_dataset.py  processed_entity.py
play/: panda_play.py  torch_play.py
results/: no-transf-disc.txt  no_tranf_adamW.txt  no_transf_v2.txt  no_transf_v3.txt  transformer_bert_desc_wiki.txt  transformer_big_bird.txt  transformer_roberta_base.txt  transformer_roberta_large.txt
sentence_splitter/: .gitignore  README.md  main.py  pyproject.toml
sentence_splitter/colabs/: Lost_in_language_recognition-hw2_split-Minerva-7B-based.csv  Lost_in_language_recognition-hw2_split-bert-base-italian-xxl-cased.csv  Lost_in_language_recognition-hw2_split-electra-base-italian-xxl-cased.csv  embedding-models.md  sentence_splitter_discriminative_training.ipynb  sentence_splitter_embeddings.ipynb  sentence_splitter_generative.ipynb  sentence_splitter_generative_eval.ipynb  sentence_splitter_generative_training.ipynb  sentence_splitter_out_of_domain_eval.ipynb  sentence_splitter_out_of_domain_eval_discriminative.ipynb  sentence_splitter_out_of_domain_generative.ipynb  sentence_splitter_out_of_domain_test.ipynb  sentence_splitter_out_of_domain_test_discriminative.ipynb  sentence_splitter_out_of_domain_test_generative.ipynb  sentence_splitter_out_of_domain_test_results.csv
sentence_splitter/colabs/out_of_domain_data/: Cuore-GOLD.txt  Pinocchio-GOLD.txt
sentence_splitter/data/: OOD_test.csv  manzoni_dev_tokens.csv  manzoni_train_tokens.csv  push_dataset_to_hub.py  push_llm_dataset_to_hub.py
sentence_splitter/generated_code/: example_usage.py  llm_sentence_splitter.py
sentence_splitter/generated_extra_doc/: claude-4-sonnet-suggestions.md
sentence_splitter/latex/: custom.bib  nlp-homework-2.tex
sentence_splitter/sentence_splitter_embedding_model/: pyproject.toml
sentence_splitter/sentence_splitter_embedding_model/script/: Malavoglia-GOLD.txt  Quarantana-GOLD.txt  ood_eval.py
sentence_splitter/sentence_splitter_embedding_model/scripts/: main.py
sentence_splitter/sentence_splitter_embedding_model/src/sentence_splitter_embedding_model/: __init__.py  encoder_hyperparams.py  encoder_splitter.py  encoder_training.py  evalutation.py  group_into_sequence.py  out_of_domain_eval.py  splitter_with_encoder.py  weighted_trainer.py
sentence_splitter/sentence_splitter_embedding_model/tests/: data.txt  test_encoder_splitter.py  test_group_into_sequence.py  test_out_of_domain.py  test_utils.py
sentence_splitter/sentence_splitter_llm/: README_LLM.md  example_usage.py  pyproject.toml  requirements_llm.txt
sentence_splitter/sentence_splitter_llm/src/sentence_splitter_llm/: __init__.py  conversation_factory.py  dataset_factory.py  minerva_labels.py  model_factory.py
sentence_splitter/sentence_splitter_llm/tests/: test_dataset_factory.py  test_minerva_labels.py
sentence_splitter/util/: pyproject.toml
sentence_splitter/util/src/util/: utils.py
transformer/: inference_app.py  inference_model.py  models.md  nlp_app.py  nlp_encoder_model.py  nlp_hyper_params.py  nlp_trainer.py  wiki_dataset.py
