[project]
name = "nlp-play"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets==3.6.0",
    "transformers>=4.54.0",
]

[tool.uv.workspace]
members = [
    "token-classification",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
