[project]
name = "nlp-play"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets==3.6.0",
    "torch>=2.7.1",
    "transformers>=4.54.0",
]

[tool.uv.workspace]
members = [
    "token-classification",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "pytest>=8.4.1",
]
