[project]
name = "sentence-splitter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.7.0",
    "pytorch-triton-rocm",
    "transformers>=4.53.3",
    "pandas>=2.3.1",
    "accelerate>=1.9.0",
    "evaluate>=0.4.5",
    "seqeval>=1.2.2",
    "sentencepiece>=0.2.0",
    "unsloth>=2025.8.2",
    "torchvision>=0.22.1",
    "ipykernel>=6.30.1",
]

[tool.uv.workspace]
members = [
    "sentence_splitter_embedding_model",
    "sentence_splitter_llm",
    "util",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
]
# ROCm6 support relies on `pytorch-triton-rocm`, which should also be installed from the PyTorch index
# (and included in `project.dependencies`).
pytorch-triton-rocm = [
    { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.3"
explicit = true

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
