[project]
name = "sentence-splitter-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Fabio Massimo Ercoli", email = "fabiomassimo.ercoli@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
sentence-splitter-llm = "sentence_splitter_llm:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
