[project]
name = "util"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Fabio Massimo Ercoli", email = "fabiomassimo.ercoli@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
util = "util:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
